--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         </li>
         <li>
           Contorno
-          <input id="c_color" type="color">
+          <input value="#000000" onchange="color('c')" id="c_color" type="color">
         </li>
         <li>
           Relleno
           <input type="checkbox" id="relleno">
-          <input id="r_color" type='color'/>
+          <input value="#000000" onchange="color('r')" id="r_color" type='color'/>
         </li>
         <li>
           <input onclick="Select('borrador')" type="button" class="btn btn-no" value="Borrador" id="borrador">
